# modern-office

./: README.md  Roadmap.md  package-lock.json  package.json
misc/: HEADER_TEMPLATE
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
